--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch run src/index.ts"
+    "dev": "bun --watch run src/index.ts",
+    "db:generate": "drizzle-kit generate --name",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "drizzle-kit": "^0.29.1",
     "tsup": "^8.3.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "@rocketseat/eslint-config": "^2.2.2",
+    "drizzle-orm": "^0.37.0",
     "eslint": "^8.56.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "pg": "^8.13.1",
     "zod": "^3.23.8"
   }
 }
