--- a/package.json
+++ b/package.json
@@ -17,12 +17,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@paralleldrive/cuid2": "^2.2.2",
     "@rocketseat/eslint-config": "^2.2.2",
-    "drizzle-orm": "^0.37.0",
     "eslint": "^8.56.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "pg": "^8.13.1",
-    "zod": "^3.23.8"
+    "eslint-plugin-simple-import-sort": "^12.1.1"
   }
 }
