--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "eslint": "^8.56.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1"
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "vitest": "^2.1.8"
   }
 }
