--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch run src/index.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "db:generate": "drizzle-kit generate --name",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -11,7 +13,8 @@
   "devDependencies": {
     "@types/bun": "latest",
     "drizzle-kit": "^0.29.1",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
