feat: add SOLID invertion of dependencies principle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,11 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
 
-    "types": ["bun-types", "vitest/globals"]
+    "types": ["bun-types", "vitest/globals"],
+
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
