--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,6 @@
   "rules": {
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-useless-constructor": "off"
   }
 }
