--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
+    "@fakerjs/faker": "^3.0.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "eslint": "^8.56.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
